# GraphMind

./: .gitignore  README.md  render.yaml  requirements.txt
.github/workflows/: backend.yaml  frontend.yaml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/src/: services.py
backend/src/api/: models.py  routes.py
backend/src/components/data_ingestion/: doc_loader.py
backend/src/components/knowledge_graph/: entity_extractor.py  graph_builder.py  orchestrator.py  relationship_extractor.py
backend/src/components/processing/: chunking.py  embeddings.py  vector_store.py
backend/src/components/tasks/: __init__.py  redis_client.py  task_manager.py
backend/src/config/: aws_config.py  config.py  logging.py  settings.py
backend/src/workflows/: flow_manager.py  ingestion_workflow.py  kg_workflow.py  state.py
backend/src/workflows/node/: document_processing.py  knowledge_graph.py  retrival.py  summarization.py
backend/tests/: test_document_processing.py  test_knowledge_graph.py  test_workflows.py
frontend/: QUICK_START.md  README.md  RESTRUCTURING_SUMMARY.md  STRUCTURE.txt  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/graphmind-ui/: package-lock.json  package.json  tailwind.config.js
frontend/graphmind-ui/src/app/: globals.css  layout.tsx  page.tsx
frontend/graphmind-ui/src/components/: FloatingShapesBackground.tsx  GraphPreview.tsx  MotionBackground.tsx  ParallaxEffect.tsx
frontend/graphmind-ui/src/hooks/: useDocumentUpload.ts  useQuery.ts
frontend/graphmind-ui/src/types/: index.ts
frontend/src/: App.tsx  README.md  index.css
frontend/src/assets/: .gitkeep
frontend/src/components/: Architecture.tsx  Features.tsx  Footer.tsx  Hero.tsx  HeroCinematic.tsx  Logo.tsx  Navbar.tsx  ProblemStatement.tsx  SolutionSnapshot.tsx  UseCases.tsx  index.ts
frontend/src/components/auth/: AuthComponents.tsx  AuthModal.tsx  (+1 more)
frontend/src/constants/: index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useDocuments.ts  useDragAndDrop.ts  useGraphData.ts  useKnowledgeGraph.ts  useQuery.ts  useSidebar.ts
frontend/src/lib/: api.ts  firebase.ts  s3Storage.ts
frontend/src/pages/: About.tsx  Contact.tsx  Index.tsx  NotFound.tsx  Upload.tsx  UploadAndQuery.tsx
frontend/src/types/: document.ts  graph.ts  index.ts
src/components/knowledge_graph/: relationship_extractor.py
src/components/processing/: embeddings.py  vector_store.py
src/config/: settings.py
src/workflows/node/: document_processing.py  retrival.py  summarization.py
tests/: test_api_endpoints.py  test_document_processing.py
(+25 files in other folders)
