[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphmind"
version = "0.1.0"
description = "Transform documents into interactive knowledge graphs"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.7",
    "pydantic-settings>=2.0.0",
    # PDF/Text Processing
    "pymupdf>=1.23.0",
    "pypdf>=3.15.0",
    "nltk>=3.8.1",
    # Vector DB + Embeddings
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
    "openai>=1.0.0",
    # LangChain Ecosystem
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.3.35",
    "langchain-huggingface>=0.0.3",
    "langgraph>=0.0.33",
    # Workflow Orchestration
    "inngest>=0.3.0",
    # Knowledge Graph
    "networkx>=3.0",
    "pyvis>=0.3.1",
    # Backend API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    # Frontend (UI Layer)
    "streamlit>=1.30.0",
    # Utils
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    # AWS S3 Integration
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "langchain-openai>=0.3.35",
    "redis>=7.0.0",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 88
target-version = ['py39']
